--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
 Django==5.2.5
+idna==3.10
+pillow==11.3.0
 pip==25.2
 psycopg2-binary==2.9.10
 python-dotenv==1.1.1
+requests==2.32.5
 sqlparse==0.5.3
 tzdata==2025.2
+urllib3==2.5.0
